--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <html lang="en">
 <head>
     <!-- Don't look, it's ugly. - XOXO Gossip Girl-->
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157366679-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157366679-1');
+    </script>
+
     <meta charset="utf-8">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/flexboxgrid.css" rel="stylesheet">
@@ -20,15 +31,6 @@
               " href=index.html>
     J<br><span class="ortspan">M S</span><br>Y
     </a>
-    <ul class="
-            col-xs-offset-6 col-xs-3
-            col-sm-offset-8 col-sm-2
-            col-lg-offset-10 col-md-1
-                ">
-        <li><a href="#project_1">WORK</a></li>
-        <li><a href=#>INFO</a></li>
-        <li><a href=#>PLAY</a></li>
-    </ul>
     </div>
 </nav>
 <!-- Index -->
