--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
     JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A DESIGNER FOCUSED<br>IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>.<br> CURRENTLY WORKING TOWARDS A BACHELORS OF<br>DESIGN AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN.
 </h1>
 
-<div class="blank">
-</div>
+<svg width="auto" height="98vh" class="blank" >
+  <ellipse cx="50%" cy="50%" rx="50%" ry="50%" stroke="#fff" stroke-width="1" fill="none"/>
+</svg>
+
 <div class="project1 row">
     <div class="id_txt1 col-xs-2">
         <h2>SEOUL ART BOOK FAIR</h2>
