--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>John Yeon</title>
     <!-- favicon -->
+    <link rel="icon" type="image/png" href="images/favicon/16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="images/favicon/32x32.png" sizes="32x32" />
 </head>
-<body class="indexbody">
+<body>
   
 <!-- Navigation -->
 <nav>
-<div class="row">
-    <div class="col-xs-4">
-        <a href="index.html" class="box row">
-            <h2 class="col-xs-2">John</h2>
-            <p class="col-xs-3"> Myeong<br>Sang</p>
+<div class="container-fluid">
+    <div class="row">
+    <div class="col-xs-5">
+        <a href="index.html" class="row">
+            <h2 class="col-xs-1">John</h2>
+            <p class="col-xs-3 col-sm-2"> Myeong<br>Sang</p>
             <h2 class="col-xs"><br>Yeon</h2>
         </a>
     </div>
-    <div class="col-xs-offset-2 col-xs-4 col-md-offset-6 col-md-1">
+    <div class="col-xs-offset-1 col-xs-4 col-md-offset-5 col-md-1">
         <h2 class="info">
             <a href="#">Play</a>
         </h2>
@@ -48,17 +51,24 @@
             <a href="#"><br>Info</a>
         </h2>
     </div>
+    </div>
 </div>
 </nav>
 <!-- Index -->
-<h1 class="index1"> 
-    JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A DESIGNER FOCUSED<br>IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>.<br> CURRENTLY WORKING TOWARDS A BACHELORS OF<br>DESIGN AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN.
-</h1>
-
-<svg width="auto" height="98vh" class="blank" >
+<div class="index1">
+<div class="container-fluid">
+    <div class="row">
+        <h1 class="col-xs-12"> 
+        JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A DESIGNER FOCUSED<br>IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>.<br> CURRENTLY WORKING TOWARDS A BACHELORS OF<br>DESIGN AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN.
+        </h1>
+    </div>
+</div>
+</div>
+<svg width="98vw" height="98vh" class="blank" >
   <ellipse cx="50%" cy="50%" rx="50%" ry="50%" stroke="#fff" stroke-width="1" fill="none"/>
 </svg>
 
+<div class="container-fluid">
 <div class="project1 row">
     <div class="id_txt1 col-xs-2">
         <h2>SEOUL ART BOOK FAIR</h2>
@@ -78,7 +88,7 @@
         <h2>DIGITAL SELF HARM</h2>
         <p>Web Design / 2019</p>
     </div>
-    <a href="#" class="pr2_img col-xs-12 col-md-offset-2 col-md-8" ></a>
+    <a href="#" class="pr2_img col-xs-12 col-sm-offset-2 col-sm-8" ></a>
     <div class="id_txt2 col-xs-12">
         <h2>DIGITAL SELF HARM</h2>
         <p>Web Design / 2019</p>
@@ -90,7 +100,7 @@
         <h2>ASHLAR</h2>
         <p>Typeface / 2019</p>
     </div>
-    <a href="#" class="pr3_img col-xs-12 col-md-offset-2 col-md-8" ></a>
+    <a href="#" class="pr3_img col-xs-12 col-sm-offset-2 col-sm-8" ></a>
     <div class="id_txt2 col-xs-12">
         <h2>ASHLAR</h2>
         <p>Typeface / 2019</p>
@@ -102,13 +112,13 @@
         <h2>VULNERABLE</h2>
         <p>Multiple / 2019</p>
     </div>
-    <a href="#" class="pr4_img col-xs-12 col-md-offset-2 col-md-8" ></a>
+    <a href="#" class="pr4_img col-xs-12 col-sm-offset-2 col-sm-8" ></a>
     <div class="id_txt2 col-xs-12">
         <h2>VULNERABLE</h2>
         <p>Multiple / 2019</p>
     </div>
 </div>
-
+</div>
 
 </body>
 </html>
