--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <!-- Please avert your eyes, it's a tragedy down there :(  -->
+    <!-- Unfortunately coded by yours truly, me :'(  -->
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157366679-1"></script>
@@ -19,7 +19,7 @@
     <link href="css/flexboxgrid.css" rel="stylesheet">
     <meta name="description" content="John Myeong Sang Yeon is a designer interested in branding, motion, and digital design.">
     <meta name="author" content="John Yeon"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>John Yeon</title>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="images/favicon/16x16.png" sizes="16x16" />
@@ -33,36 +33,36 @@
     <div class="row">
     <div class="col-xs-5">
         <a href="index.html" class="row">
-            <h2 class="col-xs-1">John</h2>
+            <h3 class="col-xs-1">John</h3>
             <p class="col-xs-3 col-sm-2"> Myeong<br>Sang</p>
-            <h2 class="col-xs"><br>Yeon</h2>
+            <h3 class="col-xs"><br>Yeon</h3>
         </a>
     </div>
     <div class="col-xs-offset-1 col-xs-4 col-md-offset-5 col-md-1">
-        <h2 class="info">
+        <h3 class="info">
             <a href="#">Play</a>
-        </h2>
-        <h2>
-            <a href="#"><br>Contact</a>
-        </h2>
+        </h3>
+        <h3>
+            <a href="mailto:myeongjohn@gmail.com"><br>myeongjohn@gmail.com</a>
+        </h3>
     </div>
-    <div class="col-xs-2 col-md-1">
-        <h2 class="info">
-            <a href="#"><br>Info</a>
-        </h2>
+    <div class="col-xs-1 col-md-1">
+        <h3 class="info">
+            <a href="info.html"><br>Info</a>
+        </h3>
     </div>
     </div>
 </div>
 </nav>
 <!-- Index -->
 <div class="index1">
-<div class="container-fluid">
-    <div class="row">
-        <h1 class="col-xs-12"> 
-        JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A DESIGNER FOCUSED<br>IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>.<br> CURRENTLY WORKING TOWARDS A BACHELORS OF<br>DESIGN AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN.
-        </h1>
+    <div class="container-fluid">
+        <div class="row">
+            <h1 class="col-xs-12 col-sm-offset-3 col-sm-6"> 
+                JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A TORONTO BASED <br>DESIGNER FOCUSED IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>. CURRENTLY WORKING TOWARDS A BACHELORS OF <br>DESIGN <span style="white-space:nowrap">AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN</span>.
+            </h1>
+        </div>
     </div>
-</div>
 </div>
 <svg width="98vw" height="98vh" class="blank" >
   <ellipse cx="50%" cy="50%" rx="50%" ry="50%" stroke="#fff" stroke-width="1" fill="none"/>
@@ -72,51 +72,57 @@
 <div class="project1 row">
     <div class="id_txt1 col-xs-2">
         <h2>SEOUL ART BOOK FAIR</h2>
-        <p>Branding / 2019</p>
     </div>
-    <a href="#" 
-       class="pr1_img col-xs-12 col-sm-offset-2 col-sm-8">
-    </a>
-    <div class="id_txt2 col-xs-12">
-        <h2>SEOUL ART BOOK FAIR</h2>
-        <p>Branding / 2019</p>
+    <div class="id_txt1 col-xs-2">
+        <h3>2019</h3>
+        <p>Branding<br>Motion<br>Web Design</p>
     </div>
+<a href="seoulartbookfair.html" class="pr1_img col-xs-12 col-sm-offset-1 col-sm-7"></a>
+    <h2 class="id_txt2 col-xs-12">SEOUL ART BOOK FAIR</h2>
+    <p class="id_txt2 col-xs-6">2019</p>
+    <p class="id_txt2 col-xs-6">Branding<br>Motion<br>Web Design</p>
 </div>
 
 <div class="project2 row">
     <div class="id_txt1 col-xs-2">
         <h2>DIGITAL SELF HARM</h2>
-        <p>Web Design / 2019</p>
     </div>
-    <a href="#" class="pr2_img col-xs-12 col-sm-offset-2 col-sm-8" ></a>
-    <div class="id_txt2 col-xs-12">
-        <h2>DIGITAL SELF HARM</h2>
-        <p>Web Design / 2019</p>
+    <div class="id_txt1 col-xs-2">
+        <h3>2019</h3>
+        <p>Web Design<br>Motion<br>UI</p>
     </div>
+<a href="#" class="pr2_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
+    <h2 class="id_txt2 col-xs-12">DIGITAL SELF HARM</h2>
+    <p class="id_txt2 col-xs-6">2019</p>
+    <p class="id_txt2 col-xs-6">Web Design<br>Motion<br>UI</p>
 </div>
     
 <div class="project3 row">
     <div class="id_txt1 col-xs-2">
         <h2>ASHLAR</h2>
-        <p>Typeface / 2019</p>
     </div>
-    <a href="#" class="pr3_img col-xs-12 col-sm-offset-2 col-sm-8" ></a>
-    <div class="id_txt2 col-xs-12">
-        <h2>ASHLAR</h2>
-        <p>Typeface / 2019</p>
+    <div class="id_txt1 col-xs-2">
+        <h3>2019</h3>
+        <p>Typeface<br>Web Design<br>Motion</p>
     </div>
+<a href="#" class="pr3_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
+    <h2 class="id_txt2 col-xs-12">ASHLAR</h2>
+    <p class="id_txt2 col-xs-6">2019</p>
+    <p class="id_txt2 col-xs-6">Typeface<br>Web Design<br>Motion</p>
 </div>
 
 <div class="project4 row">
     <div class="id_txt1 col-xs-2">
-        <h2>VULNERABLE</h2>
-        <p>Multiple / 2019</p>
+        <h2>VULNERABILITY</h2>
     </div>
-    <a href="#" class="pr4_img col-xs-12 col-sm-offset-2 col-sm-8" ></a>
-    <div class="id_txt2 col-xs-12">
-        <h2>VULNERABLE</h2>
-        <p>Multiple / 2019</p>
+    <div class="id_txt1 col-xs-2">
+        <h3>2019</h3>
+        <p>Multiples<br>3D Design</p>
     </div>
+<a href="#" class="pr4_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
+    <h2 class="id_txt2 col-xs-12">VULNERABILITY</h2>
+    <p class="id_txt2 col-xs-6">2019</p>
+    <p class="id_txt2 col-xs-6">Multiples<br>3D Design</p>
 </div>
 </div>
 
