--- a/seoulartbookfair.html
+++ b/seoulartbookfair.html
@@ -79,7 +79,7 @@
             <p id="ctr_txt">Illustrator<br>InDesign<br>After Effects<br>Sketch<br>Principle</p>
         </div>
         <div class="col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-7">
-            <h4 class="introtxt">Seoul Art Book Fair is a arts and culture festival  that celebrates  and the physical medium, held at the Seoul Museum of Art. The festival itself hosts 27 events over 3 days. The rebrand highlights the physical artifact and hand made nature of physical goods in an identity that exists in both print and digital mediums. The focus on a hands on approach is insinuated in the custom type, contrasted with the sans-serif typeset in rigid grids.<br><br>The identity of the brand is expressed through multiple deliverables, such as posters, motion advertisement,  digital and print tickets, press passes, a website and finally a fold-out brochure.</h4>
+            <h4 class="introtxt">Seoul Art Book Fair is an arts and culture festival that celebrates the physical medium, held at the Seoul Museum of Art. The festival itself hosts 27 events over 3 days. The rebrand highlights the physical artifact and hand-made nature of physical goods in an identity that exists in both print and digital mediums. The focus on a hands-on approach is insinuated in the custom type, contrasted with the sans-serif typeset in rigid grids.<br><br>The identity of the brand is expressed through multiple deliverables, such as posters, motion advertisement,  digital and print tickets, press passes, a website and finally a fold-out brochure.</h4>
         </div>
     </div>
 </div>
@@ -90,7 +90,7 @@
         <img src="images/SABF/wallmockup.jpg" width="100%">
     </div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-10">
-        <img src="images/SABF/sabf_ad.gif" width="100%">
+        <img src="images/SABF/sabf_motion.gif" width="100%">
     </div>
     <div class="col-xs-12 col-md-6">
         <img src="images/SABF/sabf_webtix.jpg" width="100%">
