--- a/seoulartbookfair.html
+++ b/seoulartbookfair.html
@@ -78,8 +78,8 @@
             <h3 id="blb_h3">Tools</h3>
             <p id="ctr_txt">Illustrator<br>InDesign<br>After Effects<br>Sketch<br>Principle</p>
         </div>
-        <div class="col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-7">
-            <h4 class="introtxt">Seoul Art Book Fair is an arts and culture festival that celebrates the physical medium, held at the Seoul Museum of Art. The festival itself hosts 27 events over 3 days. The rebrand highlights the physical artifact and hand-made nature of physical goods in an identity that exists in both print and digital mediums. The focus on a hands-on approach is insinuated in the custom type, contrasted with the sans-serif typeset in rigid grids.<br><br>The identity of the brand is expressed through multiple deliverables, such as posters, motion advertisement,  digital and print tickets, press passes, a website and finally a fold-out brochure.</h4>
+        <div class="col-xs-offset-1 col-xs-11 col-sm-offset-2 col-sm-6">
+            <p class="introtxt">Seoul Art Book Fair is an arts and culture festival that celebrates the physical medium, held at the Seoul Museum of Art. The festival itself hosts 27 events over 3 days. The rebrand highlights the physical artifact and hand-made nature of physical goods in an identity that exists in both print and digital mediums. The focus on a hands-on approach is insinuated in the custom type, contrasted with the sans-serif typeset in rigid grids.<br><br>The identity of the brand is expressed through multiple deliverables, such as posters, motion advertisement,  digital and print tickets, press passes, a website and finally a fold-out brochure. The bilingual nature of the festival is showcased in all of the deliverables.</p>
         </div>
     </div>
 </div>
@@ -87,27 +87,33 @@
 <div class="assets">
 <div class="row">
     <div class="col-xs-12 col-sm-offset-1 col-sm-10">
+        <!-- <h2>Posters</h2> -->
         <img src="images/SABF/wallmockup.jpg" width="100%">
     </div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-10">
+        <!-- <h2>Instagram Ads</h2> -->
         <img src="images/SABF/sabf_motion.gif" width="100%">
     </div>
-    <div class="col-xs-12 col-md-6">
-        <img src="images/SABF/sabf_webtix.jpg" width="100%">
-    </div>
-    <div class="col-xs-12 col-md-6">
+    <div class="col-xs-6">
+        <!-- <h2>Print & Digital Tickets</h2> -->
         <img src="images/SABF/sabf_tickets.jpg" width="100%">
     </div>
+    <div class="col-xs-6">
+        <img src="images/SABF/sabf_webtix.jpg" width="100%">
+    </div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-10">
+        <!-- <h2>Press Passes</h2> -->
         <img src="images/SABF/sabf_cards.jpg" width="100%">
     </div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-10 vimeo">
+        <!-- <h2>Landing Page</h2> -->
         <div style="padding:52.1% 0 0 0;position:relative;">
             <iframe src="https://player.vimeo.com/video/390118087?autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay;"></iframe>
         </div>
         <script src="https://player.vimeo.com/api/player.js"></script>
     </div>
     <div class="col-xs-6">
+        <!-- <h2>Brochure</h2> -->
         <img src="images/SABF/sabf_half1.jpg" width="100%">
     </div>
     <div class="col-xs-6">
