--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col-xs-offset-1 col-xs-4 col-md-offset-5 col-md-1">
         <h3 class="info">
-            <a href="#">Play</a>
+            <a href="play.html">Play</a>
         </h3>
         <h3>
             <a href="mailto:myeongjohn@gmail.com"><br>myeongjohn@gmail.com</a>
@@ -89,12 +89,12 @@
     </div>
     <div class="id_txt1 col-xs-2">
         <h3>2019</h3>
-        <p>Web Design<br>Motion<br>UI</p>
+        <p>Web Design<br>Motion<br>Infographic</p>
     </div>
-<a href="#" class="pr2_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
+<a href="digitalselfharm.html" class="pr2_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
     <h2 class="id_txt2 col-xs-12">DIGITAL SELF HARM</h2>
     <p class="id_txt2 col-xs-6">2019</p>
-    <p class="id_txt2 col-xs-6">Web Design<br>Motion<br>UI</p>
+    <p class="id_txt2 col-xs-6">Web Design<br>Motion<br>Infographic</p>
 </div>
     
 <div class="project3 row">
@@ -105,7 +105,7 @@
         <h3>2019</h3>
         <p>Typeface<br>Web Design<br>Motion</p>
     </div>
-<a href="#" class="pr3_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
+<a href="ashlar.html" class="pr3_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
     <h2 class="id_txt2 col-xs-12">ASHLAR</h2>
     <p class="id_txt2 col-xs-6">2019</p>
     <p class="id_txt2 col-xs-6">Typeface<br>Web Design<br>Motion</p>
@@ -119,7 +119,7 @@
         <h3>2019</h3>
         <p>Multiples<br>3D Design</p>
     </div>
-<a href="#" class="pr4_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
+<a href="vulnerability.html" class="pr4_img col-xs-12 col-sm-offset-1 col-sm-7" ></a>
     <h2 class="id_txt2 col-xs-12">VULNERABILITY</h2>
     <p class="id_txt2 col-xs-6">2019</p>
     <p class="id_txt2 col-xs-6">Multiples<br>3D Design</p>
