--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
     <meta name="description" content="John Myeong Sang Yeon is a designer interested in branding, motion, and digital design.">
     <meta name="author" content="John Yeon"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>John Yeon    Info</title>
+    <title>John Yeon</title>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="images/favicon/16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="images/favicon/32x32.png" sizes="32x32" />
@@ -40,7 +40,7 @@
     </div>
     <div class="col-xs-offset-1 col-xs-4 col-md-offset-5 col-md-1">
         <h3 class="info">
-            <a href="#">Play</a>
+            <a href="play.html">Play</a>
         </h3>
         <h3>
             <a href="mailto:myeongjohn@gmail.com"><br>myeongjohn@gmail.com</a>
