--- a/ashlar.html
+++ b/ashlar.html
@@ -31,7 +31,7 @@
 <nav >
 <div class="container-fluid">
     <div class="row">
-    <div class="col-xs-5">
+    <div class="col-xs-5" id="nav1">
         <a href="index.html" class="row">
             <h3 class="col-xs-1">John</h3>
             <p class="col-xs-3 col-sm-2"> Myeong<br>Sang</p>
@@ -86,7 +86,7 @@
 <div class="assets">
 <div class="row">
     <div class="col-xs-12">
-        <a href="https://johnyeon.com/ashlar.github.io/">
+        <a href="https://johnyeon.com/ashlar.github.io/" target="_blank">
             <h3 class="ashlarlink">CLICK TO VIEW SPECIMEN<br><span class="ortspan">(unresponsive)</span></h3>
         </a>
     </div>
@@ -102,7 +102,7 @@
     
 <!--  FOOTER  -->  
 <footer>
-<div class="prefoot container-fluid">
+<div class="prefoot">
     <div class="row">
         <div class="col-xs-6 col-sm-4">
             <h3>
@@ -130,7 +130,11 @@
     <div class="centerftvn"></div>
     <div class="rightftvn"></div>
 </div>
-    
+<div class="ftemail">
+<a href="mailto:myeongjohn@gmail.com">
+    <h2 id="iemail">myeongjohn@gmail.com</h2>
+</a>
+</div>
 <div class="index2">
     <div class="container-fluid">
         <div class="row">
@@ -140,6 +144,6 @@
         </div>
     </div>
 </div>
-</footer>  
+</footer> 
 </body>
 </html>
