--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <nav>
 <div class="container-fluid">
     <div class="row">
-    <div class="col-xs-5">
+    <div class="col-xs-5" id="nav1">
         <a href="index.html" class="row">
             <h3 class="col-xs-1">John</h3>
             <p class="col-xs-3 col-sm-2"> Myeong<br>Sang</p>
@@ -55,6 +55,7 @@
 </div>
 </nav>
 <!-- Index -->
+
 <div class="index1">
     <div class="container-fluid">
         <div class="row">
