--- a/seoulartbookfair.html
+++ b/seoulartbookfair.html
@@ -31,7 +31,7 @@
 <nav >
 <div class="container-fluid">
     <div class="row">
-    <div class="col-xs-5">
+    <div class="col-xs-5" id="nav1">
         <a href="index.html" class="row">
             <h3 class="col-xs-1">John</h3>
             <p class="col-xs-3 col-sm-2"> Myeong<br>Sang</p>
@@ -79,7 +79,7 @@
             <p id="ctr_txt">Illustrator<br>InDesign<br>After Effects<br>Sketch<br>Principle</p>
         </div>
         <div class="col-xs-offset-1 col-xs-11 col-sm-offset-2 col-sm-6">
-            <p class="introtxt">Seoul Art Book Fair is a bilingual arts and culture festival that celebrates the physical medium, held at the Seoul Museum of Art. The festival itself hosts 27 events over 3 days. The rebrand highlights the physical artifact and hand-made nature of physical goods in an identity that exists in both print and digital mediums. The focus on a hands-on approach is insinuated in the custom type, that mimics handwriting.<br><br>The identity of the brand is expressed through multiple deliverables, such as posters, motion advertisement,  digital and print tickets, press passes, a website and finally a fold-out brochure. The bilingual nature of the festival is showcased in all of the deliverables.</p>
+            <h4 class="introtxt">Seoul Art Book Fair is a bilingual arts and culture festival that celebrates the physical medium, held at the Seoul Museum of Art. The festival itself hosts 27 events over 3 days. The rebrand highlights the physical artifact and hand-made nature of physical goods in an identity that exists in both print and digital mediums. The focus on a hands-on approach is insinuated in the custom type, that mimics handwriting.<br><br>The identity of the brand is expressed through multiple deliverables, such as posters, motion advertisement,  digital and print tickets, press passes, a website and finally a fold-out brochure. The bilingual nature of the festival is showcased in all of the deliverables.</h4>
         </div>
     </div>
 </div>
@@ -129,7 +129,7 @@
     
 <!--  FOOTER  -->
 <footer>
-<div class="prefoot container-fluid">
+<div class="prefoot ">
     <div class="row">
         <div class="col-xs-6 col-sm-4">
             <h3>
@@ -157,7 +157,11 @@
     <div class="centerftvn"></div>
     <div class="rightftvn"></div>
 </div>
-    
+<div class="ftemail">
+<a href="mailto:myeongjohn@gmail.com">
+    <h2 id="iemail">myeongjohn@gmail.com</h2>
+</a>
+</div>
 <div class="index2">
     <div class="container-fluid">
         <div class="row">
