--- a/digitalselfharm.html
+++ b/digitalselfharm.html
@@ -148,9 +148,11 @@
     </div>
 
     <div class="col-xs-12">
-        <a href="https://drive.google.com/file/d/1IQ0xfLW_xyLYkaoEUNbLek8sUTFj5sP8/view?usp=sharing" target="_blank">
-            <h3 class="dshlink">CLICK TO DOWNLOAD PROTOTYPE<br><span class="ortspan">(Mac only)</span></h3>
+        <h3 class="dshlink">
+        <a href="https://drive.google.com/file/d/1IQ0xfLW_xyLYkaoEUNbLek8sUTFj5sP8/view?usp=sharing" target="_blank" >
+            CLICK TO DOWNLOAD PROTOTYPE<br><span class="ortspan">(Mac only)</span>
         </a>
+        </h3>
     </div>
     <div class="col-xs-12 vimeo" id="dshvid">
        <div style="padding:52.1% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/390340404?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
