--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
         <a href="index.html" class="row">
             <h3 class="col-xs-1">John</h3>
             <p class="col-xs-3 col-sm-2"> Myeong<br>Sang</p>
-            <h3 class="col-xs"><br>Yeon</h3>
+            <h3 class="col-xs-6 col-sm"><br>Yeon</h3>
         </a>
     </div>
     <div class="col-xs-offset-1 col-xs-4 col-md-offset-5 col-md-1">
         <h3 class="info">
             <a href="play.html">Play</a>
         </h3>
+     
         <h3>
             <a href="mailto:myeongjohn@gmail.com"><br>myeongjohn@gmail.com</a>
         </h3>
