--- a/ashlar.html
+++ b/ashlar.html
@@ -38,7 +38,7 @@
             <h3 class="col-xs"><br>Yeon</h3>
         </a>
     </div>
-    <div class="col-xs-offset-1 col-xs-4 col-md-offset-5 col-md-1">
+    <div class="col-xs-5 col-sm-offset-5 col-sm-1">
         <h3 class="info">
             <a href="play.html">Play</a>
         </h3>
@@ -46,7 +46,7 @@
             <a href="mailto:myeongjohn@gmail.com"><br>myeongjohn@gmail.com</a>
         </h3>
     </div>
-    <div class="col-xs-2 col-md-1">
+    <div class="col-xs-2 col-sm-1">
         <h3 class="info">
             <a href="info.html"><br>Info</a>
         </h3>
@@ -78,7 +78,7 @@
             <p id="ctr_txt">Glyphs<br>Illustrator<br>HTML/CSS</p>
         </div>
         <div class="col-xs-offset-1 col-xs-11 col-sm-offset-2 col-sm-6">
-            <p class="introtxt">Ashlar</p>
+            <h4 class="introtxt">COMING SOON</h4>
         </div>
     </div>
 </div>
@@ -87,7 +87,7 @@
 <div class="row">
     <div class="col-xs-12">
         <a href="https://johnyeon.com/ashlar.github.io/" target="_blank">
-            <h3 class="ashlarlink">CLICK TO VIEW SPECIMEN<br><span class="ortspan">(unresponsive)</span></h3>
+            <h3 class="ashlarlink">CLICK TO VIEW SPECIMEN<br><span class="ortspan">(Laptop Preferred)</span></h3>
         </a>
     </div>
 </div>
