--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- favicon -->
     <link rel="icon" type="image/png" href="images/favicon/16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="images/favicon/32x32.png" sizes="32x32" />
+    
 </head>
 <body>
   
@@ -38,16 +39,16 @@
             <h3 class="col-xs-5 col-sm"><br>Yeon</h3>
         </a>
     </div>
-    <div class="col-xs-offset-1 col-xs-4 col-md-offset-5 col-md-1">
+    <div class="col-xs-5 col-sm-offset-5 col-sm-1">
         <h3 class="info">
             <a href="play.html">Play</a>
         </h3>
      
-        <h3>
+        <h3 id="navmail">
             <a href="mailto:myeongjohn@gmail.com"><br>myeongjohn@gmail.com</a>
         </h3>
     </div>
-    <div class="col-xs-2 col-md-1">
+    <div class="col-xs-2 col-sm-1">
         <h3 class="info">
             <a href="info.html"><br>Info</a>
         </h3>
