--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   
 <!-- Navigation -->
-<nav>
+<nav id="indexnav">
 <div class="container-fluid">
     <div class="row">
     <div class="col-xs-5" id="nav1">
