--- a/seoulartbookfair.html
+++ b/seoulartbookfair.html
@@ -66,7 +66,7 @@
 <div class="blb container-fluid">    
     <div class="row">
         <div class="col-xs-12 col-sm-2">
-            <h2>SEOUL ART BOOK FAIR</h2>
+            <h2>SEOUL ART <span style="white-space:nowrap">BOOK FAIR</span></h2>
             <h3>2019</h3>
             <p>September - December</p>
         </div>
