--- a/ashlar.html
+++ b/ashlar.html
@@ -28,7 +28,7 @@
 <body>
   
 <!-- Navigation -->
-<nav >
+<nav>
 <div class="container-fluid">
     <div class="row">
     <div class="col-xs-5" id="nav1">
@@ -38,17 +38,15 @@
             <h3 class="col-xs"><br>Yeon</h3>
         </a>
     </div>
-    <div class="col-xs-4 col-xs-1 col-sm-offset-4 col-sm-1">
-        <h3>
-            <a href="mailto:myeongjohn@gmail.com"><br><br>myeongjohn@gmail.com</a>
-        </h3>
-    </div>
-    <div class="col-xs-1 col-sm-1">
+    <div class="col-xs-5 col-sm-offset-5 col-sm-1">
         <h3 class="info">
             <a href="play.html">Play</a>
         </h3>
+        <h3>
+            <a href="mailto:myeongjohn@gmail.com"><br>myeongjohn@gmail.com</a>
+        </h3>
     </div>
-    <div class="col-xs-1 col-sm-1">
+    <div class="col-xs-2 col-sm-1">
         <h3 class="info">
             <a href="info.html"><br>Info</a>
         </h3>
