--- a/index.html
+++ b/index.html
@@ -87,45 +87,48 @@
 </div>
 
 <div class="project2 row">
-    <div class="id_txt1 col-xs-2">
+    <div class="id_txt1 col-xs-8 col-sm-2">
         <h2>DIGITAL SELF HARM</h2>
     </div>
-    <div class="id_txt1 col-xs-2">
+    <div class="id_txt1 col-xs-4 col-sm-2">
         <h3>2019</h3>
         <p>Web Design<br>Motion<br>Infographic</p>
     </div>
 <a href="digitalselfharm.html" class="pr2_img col-xs-12 col-sm-8" ></a>
-    <h2 class="id_txt2 col-xs-12">DIGITAL SELF HARM</h2>
+    <!-- <h2 class="id_txt2 col-xs-12">DIGITAL SELF HARM</h2>
     <p class="id_txt2 col-xs-6">2019</p>
     <p class="id_txt2 col-xs-6">Web Design<br>Motion<br>Infographic</p>
+    -->
 </div>
     
 <div class="project3 row">
-    <div class="id_txt1 col-xs-2">
+    <div class="id_txt1 col-xs-8 col-sm-2">
         <h2>ASHLAR</h2>
     </div>
-    <div class="id_txt1 col-xs-2">
+    <div class="id_txt1 col-xs-4 col-sm-2">
         <h3>2019</h3>
         <p>Typeface<br>Web Design<br>Motion</p>
     </div>
 <a href="ashlar.html" class="pr3_img col-xs-12 col-sm-8" ></a>
-    <h2 class="id_txt2 col-xs-12">ASHLAR</h2>
+    <!-- <h2 class="id_txt2 col-xs-12">ASHLAR</h2>
     <p class="id_txt2 col-xs-6">2019</p>
-    <p class="id_txt2 col-xs-6">Typeface<br>Web Design<br>Motion</p>
+<p class="id_txt2 col-xs-6">Typeface<br>Web Design<br>Motion</p>
+-->
 </div>
 
 <div class="project4 row">
-    <div class="id_txt1 col-xs-2">
+    <div class="id_txt1 col-xs-8 col-sm-2">
         <h2>VULNERABILITY</h2>
     </div>
-    <div class="id_txt1 col-xs-2">
+    <div class="id_txt1 col-xs-4 col-sm-2">
         <h3>2019</h3>
         <p>Multiples<br>3D Design</p>
     </div>
 <a href="vulnerability.html" class="pr4_img col-xs-12 col-sm-8" ></a>
-    <h2 class="id_txt2 col-xs-12">VULNERABILITY</h2>
+    <!--<h2 class="id_txt2 col-xs-12">VULNERABILITY</h2>
     <p class="id_txt2 col-xs-6">2019</p>
     <p class="id_txt2 col-xs-6">Multiples<br>3D Design</p>
+-->
 </div>
 </div>
 
