--- a/info.html
+++ b/info.html
@@ -85,7 +85,7 @@
     </div>
     <div class="col-xs-12 col-sm-offset-3 col-sm-7" id="infoabout">
         <h5>
-            I'm a multidisciplinary designer seeking to find the middle ground between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. Currently a third year student at <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a> and looking for internship experiences in the summer of 2020.
+            I'm a multidisciplinary designer exploring boundaries between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. Currently a fourth year student at <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a>, previous intern at <a href="https://www.brucemaudesign.com/" target="_blank"><span class="ortspan">Bruce Mau Design</span></a>.
         </h5>
     </div>
 </div>
