--- a/info.html
+++ b/info.html
@@ -99,13 +99,14 @@
             <a href="https://www.are.na/john-yeon" target="_blank">Are.na</a>
         </h2>
     </div>
-    <div class="col-xs-6 col-sm-2">
+   <!-- <div class="col-xs-6 col-sm-2">
         <p>Experience</p>
         <h2><a href="https://drive.google.com/file/d/1KREm1y0HMcnfpPO5MPYKNWWGPwJ39rle/view?usp=sharing" target="_blank">Resume</a></h2>
     </div>
+-->
     <div class="col-xs-12 col-sm-2">
         <p>Let's talk ! ( ✲◡✲)人(●▲■ )</p>
-        <h2 href="mailto:myeongjohn@gmail.com"><a>myeongjohn@gmail.com</a>
+        <h2><a href="mailto:myeongjohn@gmail.com">myeongjohn@gmail.com</a>
         </h2>
     </div>
 </div>
