--- a/info.html
+++ b/info.html
@@ -73,24 +73,22 @@
     
 <div class="container-fluid infoassets">
 <div class="row">
-    <div class="col-xs-offset-1 col-xs-8 col-sm-offset-2 col-sm-10">
+    <div class="col-xs-12 col-sm-5">
         <h5>I'm John <span class="ortspan">Myeong Sang</span> Yeon.</h5>
-    </div>
-    <div class="col-xs-offset-2 col-xs-10 col-sm-offset-4 col-sm-8">
         <h5 id="ibrac">(</h5>
         <div id="ip">
             <p>John is my casual English name<br>Myeong Sang is my legal &amp; Korean name</p>
         </div>
         <h5 id="ibrac">)</h5>
     </div>
-    <div class="col-xs-12 col-sm-offset-3 col-sm-7" id="infoabout">
+    <div class="col-xs-12 col-sm-7" id="infoabout">
         <h5>
-            I'm a multidisciplinary designer exploring boundaries between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. Currently a fourth year student at <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a>, previous intern at <a href="https://www.brucemaudesign.com/" target="_blank"><span class="ortspan">Bruce Mau Design</span></a>.
+            I'm a multidisciplinary designer exploring boundaries between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. Currently a fourth year student at <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a>, previous intern at <a href="https://www.brucemaudesign.com/" target="_blank"><span class="ortspan">Bruce Mau Design</span></a>. Currently looking for internship opportunities.
         </h5>
     </div>
 </div>
 <div class="row" id="info2">
-    <div class="col-xs-6 col-sm-offset-3 col-sm-2">
+    <div class="col-xs-12 col-sm-offset-5 col-sm-7">
         <p>Find me online</p>
         <h2>
             <a href="https://www.instagram.com/my_yeon/" target="_blank">Instagram</a>
@@ -98,18 +96,23 @@
         <h2>
             <a href="https://www.are.na/john-yeon" target="_blank">Are.na</a>
         </h2>
+        <h2><a href="mailto:myeongjohn@gmail.com">myeongjohn@gmail.com</a>
+        </h2>
+    </div>
     </div>
    <!-- <div class="col-xs-6 col-sm-2">
         <p>Experience</p>
         <h2><a href="https://drive.google.com/file/d/1KREm1y0HMcnfpPO5MPYKNWWGPwJ39rle/view?usp=sharing" target="_blank">Resume</a></h2>
     </div>
 -->
+<!--
     <div class="col-xs-12 col-sm-2">
         <p>Let's talk ! ( ✲◡✲)人(●▲■ )</p>
         <h2><a href="mailto:myeongjohn@gmail.com">myeongjohn@gmail.com</a>
         </h2>
     </div>
 </div>
+-->
 <!-- <div class="row funfact">
     <div class="col-xs-offset-1 col-xs-11 col-sm-10 row">
     <div class="col-xs-12 col-sm-4">
