--- a/info.html
+++ b/info.html
@@ -83,7 +83,7 @@
     </div>
     <div class="col-xs-12 col-sm-7" id="infoabout">
         <h5>
-            I'm a multidisciplinary designer exploring boundaries between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. Currently a fourth year student at <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a>, previous intern at <a href="https://www.brucemaudesign.com/" target="_blank"><span class="ortspan">Bruce Mau Design</span></a>. Currently looking for internship opportunities.
+            I'm a multidisciplinary designer exploring boundaries between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. A 2021 graduate from <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a>, previous intern at <a href="https://www.brucemaudesign.com/" target="_blank"><span class="ortspan">Bruce Mau Design</span></a>. Currently looking for internship opportunities.
         </h5>
     </div>
 </div>
