--- a/info.html
+++ b/info.html
@@ -60,16 +60,17 @@
     <div class="infovenn1">
         <p>John is a Designer</p>
         <p>based in Toronto, Canada</p>
-        <p>focused in Branding</p>
-        <p>that appreciates the classics</p>
+        <p>focused in branding</p>
+        <p>collecting dust on his books</p>
     </div>
     <div class="infovenn2">
         <h3>Myeong Sang is a Designer</h3>
         <h3>from Seoul, South Korea</h3>
-        <h3>adept in Digital Design</h3>
-        <h3>that strives for innovation and improvisation</h3>
+        <h3>interested in the digital world</h3>
+        <h3>collecting jpgs on his laptop</h3>
     </div>
 </div>
+
     
 <div class="container-fluid infoassets">
 <div class="row">
@@ -83,7 +84,7 @@
     </div>
     <div class="col-xs-12 col-sm-7" id="infoabout">
         <h5>
-            I'm a multidisciplinary designer exploring boundaries between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. A 2021 graduate from <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a>, previous intern at <a href="https://www.brucemaudesign.com/" target="_blank"><span class="ortspan">Bruce Mau Design</span></a>. Currently looking for internship opportunities.
+            I'm a multidisciplinary designer exploring boundaries between <span class="ortspan">Visual</span>, <span class="ortspan">Motion</span> and <span class="ortspan">Interaction</span> design. Constantly learning. A 2021 graduate from <a href="https://design.ampd.yorku.ca/" target="_blank"><span class="ortspan">York/Sheridan Design</span></a>, previous intern at <a href="https://www.brucemaudesign.com/" target="_blank"><span class="ortspan">Bruce Mau Design</span></a>.
         </h5>
     </div>
 </div>
@@ -134,7 +135,7 @@
     <div class="container-fluid">
         <div class="row">
             <h1 class="col-xs-12 col-sm-offset-3 col-sm-6"> 
-                JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A TORONTO BASED <br>DESIGNER FOCUSED IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>. CURRENTLY WORKING TOWARDS A BACHELORS OF DESIGN <span style="white-space:nowrap">AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN</span>.
+                JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A TORONTO BASED <br>DESIGNER FOCUSED IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>. A RECENT GRADUATE FROM THE BACHELORS OF DESIGN <span style="white-space:nowrap">AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN</span>.
             </h1>
         </div>
     </div>
