--- a/seoulartbookfair.html
+++ b/seoulartbookfair.html
@@ -161,7 +161,7 @@
     <div class="container-fluid">
         <div class="row">
             <h1 class="col-xs-12 col-sm-offset-3 col-sm-6"> 
-                JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A TORONTO BASED <br>DESIGNER FOCUSED IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>. CURRENTLY WORKING TOWARDS A BACHELORS OF DESIGN <span style="white-space:nowrap">AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN</span>.
+                JOHN <span class="ortspan">MYEONG SANG</span> YEON IS A TORONTO BASED <br>DESIGNER FOCUSED IN <span class="ortspan">BRANDING</span>, <span class="ortspan">MOTION</span>, AND <span class="ortspan">DIGITAL DESIGN</span>. A RECENT GRADUATE FROM THE BACHELORS OF DESIGN <span style="white-space:nowrap">AT <span class="ortspan">YORK/SHERIDAN</span> DESIGN</span>.
             </h1>
         </div>
     </div>
