--- a/play.html
+++ b/play.html
@@ -61,9 +61,9 @@
         <div class="col-sm-offset-2 col-sm-8">
             <img src="images/PLAY/play8.png" width="100%">
         </div>
-        <div class="col-sm-offset-2 col-sm-8">
+        <!-- <div class="col-sm-offset-2 col-sm-8">
             <img src="images/PLAY/play7.png" width="100%">
-        </div>
+        </div> -->
         <div class="col-sm-offset-2 col-sm-8">
             <img src="images/PLAY/play9.png" width="100%">
         </div>
